# BoschExercice

./: CMakeLists.txt
include/: queue.h  thread_func.h
src/: main.cpp  thread_func.cpp
tests/: tests.cpp
